--- a/index.html
+++ b/index.html
@@ -218,27 +218,27 @@
 
 <!-- Постоянные клиенты-->
 
-<section class="section">
+<section class="section clients">
     <div class="container">
-        <h2 class="title-clients">Постоянные клиенты</h2>
-        <ul class="list-clients">
+        <h2 class="clients__title">Постоянные клиенты</h2>
+        <ul class="clients__list">
             <li> 
-                <a class="clients-border" href=""> <SVG class="clients-icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt1"></use></SVG></a>
+                <a class="clients__border" href=""> <SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt1"></use></SVG></a>
             </li>
             <li>
-                 <a class="clients-border" href=""> <SVG class="clients-icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt2"></use></SVG></a>
+                 <a class="clients__border" href=""> <SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt2"></use></SVG></a>
             </li>
             <li>
-                 <a class="clients-border" href=""> <SVG class="clients-icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt3"></use></SVG></a>
+                 <a class="clients__border" href=""> <SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt3"></use></SVG></a>
             </li>
             <li> 
-                <a class="clients-border" href=""><SVG class="clients-icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt4"></use> </SVG></a>
+                <a class="clients__border" href=""><SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt4"></use> </SVG></a>
             </li>
             <li> 
-                <a class="clients-border" href=""><SVG class="clients-icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt5"></use></SVG></a>
+                <a class="clients__border" href=""><SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt5"></use></SVG></a>
             </li>
             <li> 
-                <a class="clients-border" href=""><SVG class="clients-icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt6"></use></SVG></a>
+                <a class="clients__border" href=""><SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt6"></use></SVG></a>
             </li>
         </ul>
     </div>
@@ -246,38 +246,38 @@
  
 <!--Подвал-->
 <footer class="footer" id="contacts">
-    <div class="container">
+    <div class="container footer__container">
     <div>
-        <a href="" class="logo">Web<span class="logo-accent">Studio</span></a>
+        <a href="" class="logo footer__logo">Web<span class="logo--accent footer__logo--accent">Studio</span></a>
         <address>
             <ul>
-                    <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+                    <p class="footer__address">г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
-                <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a></li>
+                <li><a href="mailto:info@example.com" class="footer__contacts">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="footer__contacts">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </div>
-    <div class="footer-links">
-        <p class="text">присоединяйтесь</p>
-    <ul class="footer-social-list">
-        <li class="footer-social-item">
-            <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+    <div>
+        <p class="footer__text">присоединяйтесь</p>
+    <ul class="network">
+        <li class="network__item">
+            <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                     <use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use>
                 </svg> </a>
         </li>
-        <li class="footer-social-item">
-            <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+        <li class="network__item">
+            <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                     <use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use>
                 </svg> </a>
         </li>
-        <li class="footer-social-item">
-            <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+        <li class="network__item">
+            <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                     <use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use>
                 </svg> </a>
         </li>
-        <li class="footer-social-item">
-            <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+        <li class="network__item">
+            <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                     <use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use>
                 </svg> </a>
         </li>
@@ -285,14 +285,14 @@
     </div>
 
 <div>
-    <p class="text">подпишитесь на рассылку</p>
+    <p class="footer__text">подпишитесь на рассылку</p>
     <div>
-        <form class="footer-form">
+        <form class="footer__form">
             <div>
                 <label for="e-mail"></label>
                 <input type="email" name="e-mail" placeholder="E-mail" id="e-mail">
             </div>
-            <button class="subscribe" type="submit">Подписаться <svg width="24" height="24" class="icon-subscribe"> <use href="./images/icons/symbol-defs.svg#icon-send-opt"></use></svg>
+            <button class="subscribe" type="submit">Подписаться <svg width="24" height="24" class="subscribe__icon"> <use href="./images/icons/symbol-defs.svg#icon-send-opt"></use></svg>
             </button>
         </form>
     </div>
