--- a/portfolio.html
+++ b/portfolio.html
@@ -40,114 +40,114 @@
     </header>
     <!--Основной блок портфолио-->
     <main>
-        <section class="section">
+        <section class="section portfolio">
             <div class="container">
-                <h1 class="hidden">портфолио</h1>
-                <ul class="portfolio-list-button">
-                    <li class="portfolio-list-button-item"><button type="button" class="portfolio-button accent-button">Все</button></li>
-                    <li class="portfolio-list-button-item"><button type="button" class="portfolio-button">Веб-сайты</button></li>
-                    <li class="portfolio-list-button-item"><button type="button" class="portfolio-button">Приложения</button></li>
-                    <li class="portfolio-list-button-item"><button type="button" class="portfolio-button">Дизайн</button></li>
-                    <li class="portfolio-list-button-item"><button type="button" class="portfolio-button">Маркетинг</button></li>
+                <h1 class="portfolio--hidden">портфолио</h1>
+                <ul class="portfolio__button-list">
+                    <li class="portfolio__button-item"><button type="button" class="portfolio__button portfolio__button--accent">Все</button></li>
+                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Веб-сайты</button></li>
+                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Приложения</button></li>
+                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Дизайн</button></li>
+                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Маркетинг</button></li>
                 </ul>
-                <ul class="portfolio-list-img">
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb"> 
-                                <img class="img-portfolio" src="images/img-portfolio-01.jpg" alt="фото сотрудников" width="370"> 
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                <ul class="examples-set">
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay"> 
+                                <img src="images/img-portfolio-01.jpg" alt="фото сотрудников" width="370"> 
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Технокряк</h2>
-                            <p class="portfolio-text">Веб-сайт</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Технокряк</h2>
+                            <p class="examples-set__label">Веб-сайт</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-02.jpg" alt="постер с баскетболистами" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-02.jpg" alt="постер с баскетболистами" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
-                            <p class="portfolio-text">Дизайн</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Постер New Orlean vs Golden Star</h2>
+                            <p class="examples-set__label">Дизайн</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-03.jpg" alt="логотип ресторана" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-03.jpg" alt="логотип ресторана" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Ресторан Seafood</h2>
-                            <p class="portfolio-text">Приложение</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Ресторан Seafood</h2>
+                            <p class="examples-set__label">Приложение</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-04.jpg" alt="наушники" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-04.jpg" alt="наушники" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Проект Prime</h2>
-                            <p class="portfolio-text">Маркетинг</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Проект Prime</h2>
+                            <p class="examples-set__label">Маркетинг</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-05.jpg" alt="коробки" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-05.jpg" alt="коробки" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                           <div class="wrapper"><h2 class="portfolio-subtitle">Проект Boxes</h2>
-                            <p class="portfolio-text">Приложение</p></div>
+                           <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Проект Boxes</h2>
+                            <p class="examples-set__label">Приложение</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-06.jpg" alt="карта на мониторе компьютера" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-06.jpg" alt="карта на мониторе компьютера" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
-                            <p class="portfolio-text">Веб-сайт</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Inspiration has no Borders</h2>
+                            <p class="examples-set__label">Веб-сайт</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-07.jpg" alt="раскрытая книга" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-07.jpg" alt="раскрытая книга" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Издание Limited Edition</h2>
-                            <p class="portfolio-text">Дизайн</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Издание Limited Edition</h2>
+                            <p class="examples-set__label">Дизайн</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-08.jpg" alt="бирка" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-08.jpg" alt="бирка" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                           <div class="wrapper"><h2 class="portfolio-subtitle">Проект LAB</h2>
-                            <p class="portfolio-text">Маркетинг</p></div>
+                           <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Проект LAB</h2>
+                            <p class="examples-set__label">Маркетинг</p></div>
                         </a>
                     </li>
-                    <li class="portfolio-list-img-item"> 
-                        <a href="" class="card-hover">
-                            <div class="portfolio-thumb">
-                                <img class="img-portfolio" src="images/img-portfolio-9.jpg" alt="ноутбук" width="370">
-                                <p class="portfolio-action">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
+                    <li class="examples-set__item"> 
+                        <a href="" class="examples-set__card">
+                            <div class="examples-set__overlay">
+                                <img src="images/img-portfolio-9.jpg" alt="ноутбук" width="370">
+                                <p class="examples-set__text-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют этуплатформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="wrapper"><h2 class="portfolio-subtitle">Growing Business</h2>
-                            <p class="portfolio-text">Приложение</p></div>
+                            <div class="examples-set__wrapper"><h2 class="examples-set__subtitle">Growing Business</h2>
+                            <p class="examples-set__label">Приложение</p></div>
                         </a>
                     </li>
                 </ul>
@@ -157,62 +157,63 @@
     </main>
     <!--Подвал-->
 <footer class="footer" id="contacts">
-    <div class="container">
+    <div class="container footer__container">
         <div>
-            <a href="" class="logo">Web<span class="logo-accent">Studio</span></a>
+            <a href="" class="logo footer__logo">Web<span class="logo--accent footer__logo--accent">Studio</span></a>
             <address>
                 <ul>
-                    <li>
-                        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+                    <p class="footer__address">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
-                    <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
-                    <li><a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a></li>
+                    <li><a href="mailto:info@example.com" class="footer__contacts">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="footer__contacts">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </div>
-        <div class="footer-links">
-            <p class="text">присоединяйтесь</p>
-            <ul class="footer-social-list">
-                <li class="footer-social-item">
-                    <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+        <div>
+            <p class="footer__text">присоединяйтесь</p>
+            <ul class="network">
+                <li class="network__item">
+                    <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                             <use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use>
                         </svg> </a>
                 </li>
-                <li class="footer-social-item">
-                    <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+                <li class="network__item">
+                    <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                             <use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use>
                         </svg> </a>
                 </li>
-                <li class="footer-social-item">
-                    <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+                <li class="network__item">
+                    <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                             <use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use>
                         </svg> </a>
                 </li>
-                <li class="footer-social-item">
-                    <a class="footer-social-border" href=""> <svg class="footer-social-icon" width="20" height="20">
+                <li class="network__item">
+                    <a class="network__link" href=""> <svg class="network__icon" width="20" height="20">
                             <use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use>
                         </svg> </a>
                 </li>
             </ul>
         </div>
+
         <div>
-            <p class="text">подпишитесь на рассылку</p>
+            <p class="footer__text">подпишитесь на рассылку</p>
             <div>
-                <form class="footer-form">
+                <form class="footer__form">
                     <div>
                         <label for="e-mail"></label>
                         <input type="email" name="e-mail" placeholder="E-mail" id="e-mail">
                     </div>
-                    <button class="subscribe" type="submit">Подписаться <svg width="24" height="24" class="icon-subscribe">
+                    <button class="subscribe" type="submit">Подписаться <svg width="24" height="24"
+                            class="subscribe__icon">
                             <use href="./images/icons/symbol-defs.svg#icon-send-opt"></use>
                         </svg>
                     </button>
                 </form>
             </div>
         </div>
+
     </div>
 </footer>
-</body>
 </body>
 
 </html>
